feat: 역할 등록 추가

--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -125,6 +125,8 @@
 <script type="text/javascript" th:src="@{/js/switches.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery-validation-1.19.5/dist/jquery.validate.js}"></script>
 <script type="text/javascript" th:src="@{/js/dataTables.select.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery.serializeObject.js}"></script>
+<script type="text/javascript" th:src="@{/js/adminCommon.js}"></script>
 <script type="text/javascript" th:src="@{/js/custom-design.js}"></script>
 
 <script th:src="@{/files/assets/js/pcoded.min.js}"></script>
