--- a/module-admin/src/main/resources/templates/roles/memberMapping.html
+++ b/module-admin/src/main/resources/templates/roles/memberMapping.html
@@ -190,14 +190,11 @@
                                         <thead>
                                         <tr role="row">
                                             <th class="select-checkbox sorting_disabled" rowspan="1" colspan="1" aria-label="" style="width: 3.125px;"></th>
-                                            <th class="sorting_asc" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1" aria-sort="ascending"
-                                                aria-label="Name: activate to sort column descending" style="width: 126.625px;">사용자
+                                            <th class="sorting_asc" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 126.625px;">사용자
                                             </th>
-                                            <th class="sorting" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1"
-                                                aria-label="Position: activate to sort column ascending" style="width: 213.312px;">휴대폰
+                                            <th class="sorting" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 213.312px;">휴대폰
                                             </th>
-                                            <th class="sorting" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1"
-                                                aria-label="Office: activate to sort column ascending" style="width: 87.1094px;">이메일
+                                            <th class="sorting" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 87.1094px;">이메일
                                             </th>
                                         </tr>
                                         </thead>
@@ -443,21 +440,30 @@
                         {"className": "dt-center", "targets": "_all"}
                 ],
 
-                pagingType: 'full_numbers',
+                // pagingType: 'full_numbers',
                 lengthChange: false,
                 responsive:true,
                 searching: true,
                 ordering: false,
                 paging: true,
                 info: true,
-                pageLength: 10,
+                pageLength: 5,
                 bPaginate: true,
                 bAutoWidth: true,
                 serverSide: true,
                 processing: true,
                 ajax: {
-                    url: '/admin/roles/memberMapping/members',
-                    type: 'get',
+                    "url": '/admin/roles/memberMapping/members/search',
+                    "method": 'get',
+                    "dataSrc": function(res) {
+/*                        const jsonData = {};
+                        jsonData.draw = res.draw;
+                        jsonData.recordsTotal = res.recordsTotal;
+                        jsonData.recordsFiltered = res.recordsFiltered;
+                        jsonData.data= res.data;*/
+
+                        return res.data;
+                    }
                 },
                 columns: [
                     {data: 'id'},
