--- a/module-admin/src/main/resources/templates/roles/memberMapping.html
+++ b/module-admin/src/main/resources/templates/roles/memberMapping.html
@@ -53,8 +53,7 @@
                                                                     <div class="mb-0 form-group row">
                                                                         <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
                                                                         <div class="input-group input-group-dropdown mb-0">
-                                                                            <input type="text" class="form-control form-control-round" aria-label="Text input with dropdown button" id="searchKeyword"
-                                                                                   name="searchKeyword">
+                                                                            <input type="text" class="form-control form-control-round" id="searchKeyword" name="searchKeyword">
                                                                             <select id="searchType" name="searchType" class="form-select form-control form-control-round custom-select">
                                                                                 <option value="">- 선택 -</option>
                                                                                 <option value="U.NM">이름</option>
@@ -78,9 +77,7 @@
                                                                     <h5><strong>사용자 검색 결과</strong></h5>
                                                                 </div>
                                                                 <div class="col-12 col-md-6 text-right">
-                                                                    <button type="button" id="goPopup" class="btn btn-primary waves-effect waves-light" data-bs-toggle="modal"
-                                                                            data-bs-target="#managerSearchPopup">사용자추가
-                                                                    </button>
+                                                                    <button type="button" id="addMemberBtn" class="btn btn-primary">사용자추가 </button>
                                                                 </div>
                                                             </div>
                                                             <div class="card-block-small">
@@ -99,9 +96,6 @@
                                                                 </div>
                                                             </div>
                                                         </form>
-
-                                                        <div class="modal fade" id="userAddModal" data-bs-backdrop="static">
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -122,160 +116,7 @@
         </div>
     </div>
 
-    <!-- Page-body end -->
-    <div class="modal fade" id="managerSearchPopup">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content type_2">
-                <div class="modal-header">
-                    <h4 class="modal-title">회원검색</h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"></span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="card">
-                        <div class="card-block-small">
-                            <div class="row">
-                                <div class="col-12 col-lg-6 mb-2 mb-lg-0">
-                                    <div class="mb-0 form-group">
-                                        <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
-                                        <div class="input-group input-group-sm input-group-dropdown mb-0">
-                                            <input type="text" class="form-control form-control-round" aria-label="Text input with dropdown button" name="popupFilterKeywordInput"
-                                                   id="popupFilterKeywordInput"/>
-
-                                            <select name="popupFilterKeywordSelect"
-                                                    class="form-select form-control form-control-sm form-control-primary form-bg-primary form-control-round">
-                                                <option value="opt1">primary</option>
-                                                <option value="opt2">Type 2</option>
-                                                <option value="opt3">Type 3</option>
-                                                <option value="opt4">Type 4</option>
-                                                <option value="opt5">Type 5</option>
-                                                <option value="opt6">Type 6</option>
-                                                <option value="opt7">Type 7</option>
-                                                <option value="opt8">Type 8</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-lg-6">
-                                    <div class="mb-0 form-group">
-                                        <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>기관</strong></div>
-                                        <select class="js-example-basic-single col-sm-12 sm" name="popupFilterAgencySelect">
-                                            <optgroup label="Developer">
-                                                <option value="AL">Alabama</option>
-                                                <option value="WY">Wyoming</option>
-                                            </optgroup>
-                                            <optgroup label="Designer">
-                                                <option value="WY">Peter</option>
-                                                <option value="WY">Hanry Die</option>
-                                                <option value="WY">John Doe</option>
-                                            </optgroup>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mt-1 p-t-20 text-center border-top">
-                                <button class="btn btn-disabled m-r-5" data-bs-dismiss="modal">초기화</button>
-                                <button class="btn btn-primary">검색</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card m-b-10">
-                        <div class="card-block-small">
-                            <div class="row">
-                                <div class="col-12">
-                                    <!-- 그리드 부분(임의로 넣어둠) -->
-                                    <table id="colum-select" class="table table-striped table-bordered nowrap dataTable" role="grid"
-                                           aria-describedby="colum-select_info">
-                                        <thead>
-                                        <tr role="row">
-                                            <th class="select-checkbox sorting_disabled" rowspan="1" colspan="1" aria-label="" style="width: 3.125px;"></th>
-                                            <th class="sorting_asc" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1" aria-sort="ascending"
-                                                aria-label="Name: activate to sort column descending" style="width: 126.625px;">사용자
-                                            </th>
-                                            <th class="sorting" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending"
-                                                style="width: 213.312px;">휴대폰
-                                            </th>
-                                            <th class="sorting" tabindex="0" aria-controls="colum-select" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending"
-                                                style="width: 87.1094px;">이메일
-                                            </th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr role="row" class="odd">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Airi Satou</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="even">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="odd">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="even">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="odd">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="even">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="odd">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="even">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="odd">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        <tr role="row" class="even">
-                                            <td class=" select-checkbox"></td>
-                                            <td class="sorting_1">Angelica Ramos</td>
-                                            <td>01012345678</td>
-                                            <td>adcde@gmail.com</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                    <!-- //그리드 부분(임의로 넣어둠) -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary waves-effect waves-light ">선택</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="modal fade" id="memberListModalContainer" data-bs-backdrop="static" aria-hidden="true"></div>
 
     <link rel="stylesheet" type="text/css" th:href="@{/files/assets/pages/treeview/treeview.css}"></link>
     <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/jstree/dist/themes/default/style.css}"></link>
@@ -430,13 +271,23 @@
                 $('#upperName').val();
             }
         };
+        let memberListModal;
 
         $(function () {
             roleController.init();
 
-            $('#saveBtn').on('click', function () {
-                roleController.save();
-            });
+            $('#addMemberBtn').on('click',function() {
+                if(!!roleController.selectedNode) {
+                    $("#memberListModalContainer").load('/admin/roles/memberListModal', function(response, status, xhr) {
+                        if (status == "success") {
+                            memberListModal = new bootstrap.Modal($('#memberListModalContainer'));
+                            memberListModal.show();
+                        }
+                    });
+                } else{
+                    alert('역할을 선택하여 주십시오.');
+                }
+            })
         });
 
     </script>
