--- a/module-admin/src/main/resources/templates/roles/resourceMapping.html
+++ b/module-admin/src/main/resources/templates/roles/resourceMapping.html
@@ -278,9 +278,9 @@
                     type:'post',
                     url:`/admin/roles/${_this.selectedRoleId}/resources/mapping`,
                     contentType: 'application/json',
-                    dataType: 'json',
                     data : JSON.stringify(filteredDatas)
                 }).done(function(response){
+                    alert('등록이 완료되었습니다.');
                 }).fail(function(error){
                     alert('등록중 에러가 발생하였습니다. 다시 시도해주시기 바랍니다.');
                     console.log(JSON.stringify(error));
